@@ -31,12 +31,13 @@ from Mailman import mm_cfg
 def process(mlist, msg, msgdata):
     if not mm_cfg.REMOVE_DKIM_HEADERS:
         return
-    if (mm_cfg.REMOVE_DKIM_HEADERS == 1 and
+    if (mm_cfg.REMOVE_DKIM_HEADERS == 1 and not
            (msgdata.get('from_is_list') == 1 or
             (mlist.from_is_list == 1 and msgdata.get('from_is_list') != 2)
            )
        ):
-        del msg['domainkey-signature']
-        del msg['dkim-signature']
-        del msg['authentication-results']
+        return
+    del msg['domainkey-signature']
+    del msg['dkim-signature']
+    del msg['authentication-results']
 
